:heavy_plus_sign: Adds `liquid-utilities/includes-attribution#1` submodule
**Additions**

- `_includes/modules/includes-attribution`, Liquid includes that builds Attribution list of links

**Edits**

- `.gitmodules`, tracks submodules AKA Git within Git _fanciness_

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,7 @@
 	path = _includes/modules/includes-mathjax
 	url = https://github.com/liquid-utilities/includes-mathjax.git
 	branch = master
+[submodule "includes-attribution"]
+	path = _includes/modules/includes-attribution
+	url = https://github.com/liquid-utilities/includes-attribution.git
+	branch = main
