Adds site configurations for attribution includes

--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,12 @@ collections:
     permalink: /:collection/:name/
 
 
+attribution:
+  title: Attribution
+  class_prefix: attribution
+  auto_font_awesome: true
+
+
 include:
   - .github/
 
