Adds comment about attribution configurations

--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,7 @@ collections:
     permalink: /:collection/:name/
 
 
+## liquid-utilities/include-attribution customizations
 attribution:
   title: Attribution
   class_prefix: attribution
