--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: 100 Days of Code
 description: >- # this means to ignore newlines until "baseurl:"
-  Miscellaneous codding tips and tricks from the author known as S0AndS0
+  Miscellaneous coding tips and tricks from the author known as S0AndS0
 # baseurl: "" # the subpath of your site, e.g. /blog
 url: 'https://s0ands0.github.io'
 author: S0AndS0
